# -exchange_rate_service

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_09_0218-b99138989fdf_create_currencu_table.py
app/: config.py  create_fastapi_app.py  main.py
app/api/: exception_container.py  exchange_rate_view.py  test.py
app/di/: di.py
app/dto/: dto.py
app/managers/: source_currency_manager.py
app/models/: __init__.py  base.py  currency.py  dp_helper.py
app/repository/: repository.py
app/service/: exceptions.py  exchange_rate_service.py
app/sheduler_task/: sheduler_task.py
app/tests/: conftest.py
app/tests/test_repository/: test_repository.py
