[tool.poetry]
name = "exchange-rate-service"
version = "0.1.0"
description = ""
authors = ["Artem Makushkin <artem555525fssg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
python-json-logger = "^2.0.7"
alembic = "^1.13.2"
httpx = "^0.27.2"
xmltodict = "^0.13.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
